# gigatoken

./: .gitignore  Cargo.toml  README.md  benchmark.js  cl100k_base.tiktoken  design_doc.md  index.d.ts  index.js  package.json  pretokenizer_optimization_log.md  pyproject.toml
benches/: encode.rs  encode_doc.rs  encode_st.rs  encode_st_sp.rs  pretokenize.rs  pretokenize_profile.rs  pretokenize_profile_all.rs  simdutf_transcode.rs  unicode.rs
benches/common/: mod.rs
benchmarks/: families.json  results.json  results_node.json
benchmarks/compare/: results.py
benchmarks/compare/js/: measure.js  plot_throughput.js  results.js  sweep.js
benchmarks/compare/py/: measure.py  plot_throughput.py  results.py  sweep.py
examples/: bench_char_check.rs  bench_collision_check.rs  encode_files.py  hf_drop_in.py  indonesian_text.js  quickstart.js  quickstart.py  tiktoken_drop_in.js  tiktoken_drop_in.py
gigatok/: __init__.py  _hf_compat.py  _tiktoken_compat.py  _tokenizer.py
gigatok/_load/: hf.py
gigatoken/: __init__.py  _cli.py  _hf_compat.py  _parallel.py  _tiktoken_compat.py  _tokenizer.py
gigatoken/_load/: hf.py  hub.py  sentencepiece.py
gigatoken/gigatoken_rs/: __init__.pyi
jeton/: __init__.py
jeton/_load/: __init__.py  hf.py  tiktoken.py
jeton/jeton_rs/: __init__.pyi
notebooks/: bit_patterns.py  data_view.py  dclm_sample.jsonl  dfa_states.py  gather_free.py  luke_ref.py  simd_unicode.py  unicode.py  unicode_classes.py  unicode_gather.py
notebooks/js/: bit_patterns.js  bit_patterns2.js  data_view.js  dfa_states.js  gather_free.js  inspect_tokenizers.js  luke_ref.js  simd_unicode.js  unicode.js  unicode_classes.js  unicode_gather.js
notebooks/py/: bit_patterns.py  bit_patterns2.py  data_view.py  dfa_states.py  gather_free.py  inspect_tokenizers.py  luke_ref.py  simd_unicode.py  unicode.py  unicode_classes.py  unicode_gather.py
profiling/: .gitignore  ab_bench.py  ab_st2r3_vs_main.json  analyze.py  campaign_report.md  mt_ab.py  mt_gpt2.json  mt_olmo3.json  pmu_summary.py  profile.sh  r3_definitive.json  r3_screen.json  r3final_vs_all.json  st2_findings.md  x86_port_plan.md  zen5_st_profile.md
profiling/mt4_analysis/: mt_report.txt  mt_round4_findings.md
profiling/mt5_analysis/: mt_report.txt  mt_round5_findings.md
profiling/zen5/: cold_l2.txt  cold_pipel1.txt  cold_pipel2.txt  cold_rates.txt  cold_thp_ipc.txt  repro.sh  warm_l2.txt  warm_l23.txt  warm_pipel1.txt  warm_pipel2.txt  warm_rates.txt
scripts/: profile-cpu.fish
src/: batch.rs  bpe.rs  bpe_train.rs  lib.rs  main.rs  pretokenize.rs  utils.rs
src/bindings/: bridge.rs  matcher.rs  mod.rs  napi_binding.rs  padding.rs  sources.rs  train.rs
src/bpe/: mod.rs  pretoken_cache.rs  sentencepiece.rs  tiktoken.rs
src/encode/: tiktoken_radix.rs
src/input/: bytes.rs  decompress.rs  file_source.rs  jsonl.rs  mod.rs  parquet.rs  py.rs
src/load_tokenizer/: hf.rs  mod.rs  tiktoken.rs
src/output/: mod.rs
src/pretokenize/: mod.rs  options.rs  pretoken.rs  pretoken_combinator.rs  pretoken_fast.rs  pretoken_state_machine.rs  pretokenize_traits.rs  simd.rs  unicode.rs  unicode_trie.rs
src/pretokenize/fast/: cl100k.rs  cl100k_family.rs  deepseek_v3.rs  kimi.rs  mask.rs  mod.rs  nemotron.rs  o200k.rs  o200k_family.rs  olmo3.rs  qwen2.rs  qwen3_5.rs  r50k.rs
tests/: bench_file_source.py  bench_train_encode.py  conftest.py  dclm_fixture.py  hf_cache.py  test_bpe_train.py  test_bpe_train_compare.py  test_byte_gap_vocab.py  test_encode.py  test_encode_dclm.py  test_encode_files.py  test_file_source.py  test_from_hf.py  test_from_tiktoken.py  test_hf_compat.py  test_kimi.py  test_load_hf.py  test_multiprocessing.py  test_parquet_source.py  test_pretokenizer_iterator.py  test_sentencepiece.py  test_tiktoken_compat.py  test_tokenizer_usage.py  test_use_with_tokenizers.py
tests/scripts/: build_toker_tokenizer.py
tests/tokenizers/: conftest.py  test_hf_parity.py
toker/: _tiktoken.py
toker/toker_rs/: __init__.pyi
